2008-10-07  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/mod_roster_odbc.erl: fix MySQL multiple requests issue.

2008-10-06  Badlop  <badlop@process-one.net>

	* doc/guide.html: Regenerated

	* doc/guide.tex: Fix a problem in SVN merge from trunk

2008-10-06  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/ejabberd_rdbms.erl: fix SQL database reconnection
	issues (EJAB-764) and add odbc_start_interval configuration
	directive (default to 30 seconds).
	* src/odbc/ejabberd_odbc.erl: likewise.
	* src/odbc/ejabberd_odbc_sup.erl: likewise.
	* doc/guide.tex: likewise.

2008-10-03  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/odbc/odbc_queries.erl: Fix syntax error on update_roster_sql query.

2008-10-03  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/odbc/odbc_queries.erl: Fix empty query that fails on MySQL (merged from trunk).

2008-10-01  Mickael Remond  <mremond@process-one.net>

	* src/mod_shared_roster.erl: Correct roster push when changing
	a shared roster entry name (EJAB-738).

2008-09-30  Badlop  <badlop@process-one.net>

	* src/*/Makefile.win32: Provide explicit beam filenames because
	nmake does not accept wildcards (thanks to Attila
	Vangel)(EJAB-543)

2008-09-29  Badlop  <badlop@process-one.net>

	* contrib/ejabberd-modules.repo: Include 2.0.x branches

2008-09-22  Mickael Remond  <mremond@process-one.net>

	* src/mod_configure.erl: Fix adhoc commands reply types for
	"get-online-users-num" and "get-registered-users-num" (EJAB-756).

2008-09-15  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix explanation of mod_muc's anonymous
	option. Make clear that an ejabberd_service can only serve a
	single external component. Provide Mnesia directory when setting
	clustering (thanks to Matthew Reilly)

2008-09-02  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix mod_proxy configuration example
	* doc/guide.html: Likewise

2008-08-27  Christophe Romain  <christophe.romain@process-one.net>
